# ImageSequencePlayerGIF

./: appt.xml
build1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SequencePlayerGIF.sln  SequencePlayerGIF.vcxproj  SequencePlayerGIF.vcxproj.filters  SequencePlayerGIF_automoc.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  moc_ChangeCameraPositionControls.cpp  moc_Player.cpp  moc_PlayerControls.cpp
build1/SequencePlayerGIF.dir/Debug/Sequence.9E2E4DD3.tlog/: CL.read.1.tlog  CL.write.1.tlog  SequencePlayerGIF.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build1/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
scr/: CMakeLists.txt  CameraViewSettings.cpp  CameraViewSettings.h  ChangeCameraPositionControls.h  ChangeCameraPositonControls.cpp  LoadVideoUtils.cpp  LoadVideoUtils.h  Player.cpp  Player.h  PlayerControls.cpp  PlayerControls.h  SequenceView.cpp  SequenceView.h  XmlFileReader.cpp  XmlFileReader.h  main.cpp
ui/: Makefile  Makefile.Debug  Makefile.Release  TestUI.pro  TestUI.ui  main.cpp  testUI.h  ui.pro
